cmake_minimum_required(VERSION 3.30)

set(CMAKE_CXX_STANDARD 17)

add_executable(
        p01.cpp
        p02.cpp
        p03.cpp
        p04.cpp
        p05.cpp
        p06.cpp
        p07.cpp
        p08.cpp
        p09.cpp
        p10.cpp
        p11.cpp
        p12.cpp
        p13.cpp
        p14.cpp
        p15.cpp
)
