cmake_minimum_required(VERSION 3.30)
project(nsspc)

set(CMAKE_CXX_STANDARD 17)

add_executable(nsspc
        2021/prelim/p01.cpp
        2021/prelim/p02.cpp
        2021/prelim/p03.cpp
        2021/prelim/p04.cpp
        2021/prelim/p05.cpp
        2021/prelim/p06.cpp
        2021/prelim/p07.cpp
        2021/prelim/p08.cpp
        2021/prelim/p09.cpp
        2021/prelim/p10.cpp
        2021/prelim/p11.cpp
        2021/prelim/p12.cpp
        2021/prelim/p13.cpp
        2021/prelim/p14.cpp
        2021/prelim/p15.cpp
        2022/prelim/p01.cpp
        2022/prelim/p02.cpp
        2022/prelim/p03.cpp
        2022/prelim/p04.cpp
        2022/prelim/p05.cpp
        2022/prelim/p06.cpp
        2022/prelim/p07.cpp
        2022/prelim/p08.cpp
        2022/prelim/p09.cpp
        2022/prelim/p10.cpp
        2022/prelim/p11.cpp
        2022/prelim/p12.cpp
        2022/prelim/p13.cpp
        2022/prelim/p14.cpp
        2022/prelim/p15.cpp
)
